--- a/styles/index.css
+++ b/styles/index.css
@@ -8,23 +8,22 @@ body {
     overflow-y: auto;
     overflow-x: hidden;
     cursor: text;
-    background-color: #171717;
+    background-color: #1b1b1b;
 }
 
 .terminal-content {
-    padding: 20px;
+    padding: 0px 20px 20px 20px;
     font-size: 15px;
     line-height: 20px;
     white-space: pre-wrap;
-    color: #aaa;
     font-family: monospace;
     display: flex;
     flex-direction: column;
 }
 
 .terminal-banner {
-    color: teal;
-    text-shadow: 0 0 5px teal;
+    color: #a89984;
+    text-shadow: 0 0 5px #a89984;
     line-height: normal;
     font-weight: bold;
     font-size: calc(1vw + 7px);
@@ -43,11 +42,12 @@ body {
 }
 
 .terminal-welcome-message {
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+    color: #aaa;
 }
 
 .terminal-command-output {
-    padding: 10px;
+    padding: 10px 10px 10px 0px;
     max-width: 800px;
 }
 
@@ -56,21 +56,8 @@ body {
 }
 
 .terminal-command-output li span {
-    color: #eeeeee;
+    color: #8fee96;
     text-shadow: 0 0 4px #eeeeee;
-}
-
-
-.terminal-command-output dd {
-    margin-inline-start: 20px;
-}
-
-.terminal-command-output dd:not(:last-child) {
-    margin-block-end: 0.3em;
-}
-
-.terminal-command-output dd::before {
-    content: "- ";
 }
 
 .terminal-command-output ul {
@@ -79,6 +66,7 @@ body {
 
 .terminal-command-record {
     scroll-margin: 15px;
+    display: flex;
 }
 
 .terminal-input-area {
@@ -89,6 +77,7 @@ body {
 
 .terminal-prompt {
     margin-right: 5px;
+    color:  #458588;
 }
 
 .terminal-heading::before {
@@ -97,35 +86,48 @@ body {
 }
 
 .terminal-input {
+    outline: none;
     font-family: inherit;
-    font-size: inherit;
-    font-size: inherit;
-    color: rgb(240, 191, 129);
-    background: transparent;
-    border: 0px;
-    outline: none; /* no highlight on focus */
-    width: 100%;
+    font-size: 12px;
+    color: #8fee96;
+    background-color: #8fee96;
+    position: relative;
+    opacity: 1;
+    height: 1.5em;
+    width: 10px;
+    max-width: 10px;
+    overflow: hidden;
+    text-indent: -5px;
+    display: inline-block;
+    text-decoration: blink;
+    animation: blinker 1s linear infinite;
+}
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
 }
 
 .terminal-error-group {
     display: flex;
-    flex-direction: column;
+    gap: 5px;
 }
 
 .terminal-error {
-    color: red;
+    color: #cc241d;
 }
 
 .terminal-glow {
-    color: #eeeeee;
-    text-shadow: 0 0 4px #eeeeee;
+    color: #8fee96;
+    text-shadow: 0 0 4px #8fee96;
 }
 
 a {
-    color: #dea5f5;
+    color: #f0bf81;
+    cursor: pointer;
 }
 a:hover {
     color: black;
-    background-color: #c4a5f5;
+    background-color: #f0bf81;
     text-decoration: none;
 }
